--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.3"
   },
